test/failing/context-nonexist.trunnel

struct x with context c {
  u8 foo[c.bar];
}
